White Line Flickers on https://www.miragefestival.com/ with WebRender on when scrolling
Categories
(Core :: Graphics: WebRender, defect, P3)
Tracking
()
People
(Reporter: rdoghi, Assigned: aosmond)
References
(Blocks 1 open bug, )
Details
Attachments
(2 files)
[Affected versions]:
Nightly 77.0a1
[Affected platforms]:
Platforms: Windows 10
Preconditions:
Verify about:support and check Compositing = WebRender
if it's not enabled reach about:config and set gfx.webrender.all = true
Steps :
- Open the Firefox Browser and reach https://www.miragefestival.com/
- Scroll a bit up and down and watch the bottom of the first mirage (the one with the pink lines).
Expected Results :
There should be no graphical issues displayed.
Actual Results :
White flicker is displayed at the bottom of the first mirage when scrolling up or down.
This issue only occurs with WebRender on.
This issue occurs on Laptops as well as Desktops with Nvidia or Intel GPU's.
| Reporter | ||
Comment 1•5 years ago
|
||
| Reporter | ||
Updated•5 years ago
|
Comment 2•5 years ago
|
||
Rares, is gfx.webrender.compositor on as well when this issue happens? Can you reproduce it in release or just Nightly?
Comment 3•5 years ago
|
||
I can repro this on my mac, so probably not compositor related.
Comment 4•5 years ago
|
||
Andrew, could this be a snapping thing?
| Reporter | ||
Comment 5•5 years ago
|
||
This issue occurs with both gfx.webrender.compositor = true/false.
With gfx,webrender.force-disabled = true this issue does not reproduce.
| Assignee | ||
Comment 6•5 years ago
|
||
I believe so, there are two canvases with fractional heights at the boundary where the white line flashes.
| Assignee | ||
Comment 7•5 years ago
|
||
The original site has changed, but the Web Archive has a snapshot this still reproduces.
| Reporter | ||
Comment 8•5 years ago
|
||
Yep they moved it, you can find it here as well : http://www.miragefestival.com/2020/ weirdly enough on some laptops, I was unable to reproduce it, on others it can still be seen as well as on the desktops we have.
| Assignee | ||
Comment 9•5 years ago
|
||
I have a prototype working now, where we generate the transform needed for canvas (or any async image pipeline iframes really) during scene building instead of display list building. This is because we need the snapped sizes from scene building to properly calculate the transform. This fixes the white line issue for me. Putting together the final patch and tests now.
Comment 10•5 years ago
|
||
Because this bug's Severity has not been changed from the default since it was filed, and it's Priority is P3 (Backlog,) indicating it has been triaged, the bug's Severity is being updated to S3 (normal.)
Updated•5 years ago
|
Updated•5 years ago
|
| Assignee | ||
Comment 11•5 years ago
|
||
When a transform depends on the layout size of an element, one can see
visual distortions caused by the difference between the unsnapped size
used in the transform, and the snapped size calculated during scene
building. Ideally we could compute the transform after we snap, rather
than before. This patch adds support for a computed reference frame
which takes parameters to calculate the ideal transform dynamically.
In a future patch, we should make videos take advantage of this same
mechanism to avoid similar problems. This requires support for mirroring
and rotations.
Updated•5 years ago
|
Comment 12•5 years ago
|
||
Comment 13•5 years ago
|
||
| bugherder | ||
Comment 14•5 years ago
|
||
Since the status are different for nightly and release, what's the status for beta?
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 15•5 years ago
|
||
Marking 78 as affected but this can ride the trains.
| Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
Updated•5 years ago
|
| Reporter | ||
Comment 16•5 years ago
|
||
This issue is verified as fixed in our latest Nightly build as well as Beta 79.0b3 on Windows 10.
Description
•